# Assignment_1_system

./: CMakeLists.txt
ADT-main/: AdptArray.c  Demo.c  Person.c
